// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleDetails should render 1`] = `
<div
  class="css-18icqaw"
  data-testid="role-details"
>
  <div
    class="css-16ehm7c"
  >
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        2020-02-12 21:44 UTC
      </div>
      <div
        class="css-19d5ki7"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        N/A
      </div>
      <div
        class="css-19d5ki7"
      >
        REVIEWED DATE
      </div>
    </div>
  </div>
</div>
`;

exports[`RoleDetails should render with mock data 1`] = `
<div
  class="css-18icqaw"
  data-testid="role-details"
>
  <div
    class="css-16ehm7c"
  >
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        2020-12-01 21:44 UTC
      </div>
      <div
        class="css-19d5ki7"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        2020-12-01 21:44 UTC
      </div>
      <div
        class="css-19d5ki7"
      >
        REVIEWED DATE
      </div>
    </div>
  </div>
</div>
`;
